﻿0.8.0
=====

New Features:

  * Drop support for JDK 1.4.  Java 5 or later is now required to run JAMWiki.
  * Add an optional "Show Changes" button during editing to display a diff
    view of the current edit.
  * Add diff highlighting for the portion of the line that changed (if any),
    similar to Mediawiki.
  * Allow an alternate file name to be specified as the "Destination Filename"
    when uploading, similar to Mediawiki.
  * Add links to the edited section in edit summaries on recent changes,
    history, etc, similar to Mediawiki.
  * Remove ability to automatically upgrade from versions prior to 0.6.0.
  * Implement caching for diffs and topic versions to speed up page rendering.
  * Refactor exception handling to throw and catch exceptions at a more
    granular level.
  * Allow JAMWiki properties to be read from outside of the WAR file or from
    system properties (urpi).
  * Allow authentication with pluggable Spring authentication modules that
    do not implement UserDetailService such as existing JAAS modules (urpi).
  * When a password or other value is found un-encrypted in a properties file
    automatically encrypt it to allow for changing database passwords, etc.
    Reported by rebecca and an anonymous user.
  * Upgrade to javadiff 1.1.0.
  * Upgrade to JFlex 1.4.3.
  * Upgrade to JUnit 4.5.
  * Upgrade to JSTL standard taglib 1.1.2.
  * Upgrade to ehcache 1.6.0.

Bugfixes:

  * Update Spring Security configuration to remove reliance on the deprecated
    FilterInvocationDefinitionSourceEditor class.
  * Fix the Bliki local Maven repository metadata to resolve build warnings.
  * Do not use the category sort key for display purposes, only for sorting,
    which is consistent with Mediawiki.  Reported by hanspeterklapf.
  * Allow use of magic words and templates in category sort keys, such as
    [[Category:Test|{{PAGENAME}}]].
  * Throw an error when trying to rename images or categories with topic names