@@ -17,19 +17,25 @@
 package org.jamwiki.migrate;
 
 import java.io.File;
+import java.io.IOException;
+import java.sql.Timestamp;
+import java.text.ParseException;
+import java.util.ArrayList;
+import java.util.Date;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.TreeMap;
 import java.util.regex.Pattern;
+import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.parsers.SAXParserFactory;
 import javax.xml.parsers.SAXParser;
+import org.apache.commons.lang.time.DateUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.math.NumberUtils;
-import org.jamwiki.WikiBase;
 import org.jamwiki.model.Topic;
 import org.jamwiki.model.TopicVersion;
 import org.jamwiki.model.WikiUser;
-import org.jamwiki.parser.ParserOutput;
-import org.jamwiki.parser.ParserUtil;
 import org.jamwiki.utils.LinkUtil;
 import org.jamwiki.utils.NamespaceHandler;
 import org.jamwiki.utils.WikiLink;
@@ -40,34 +46,43 @@ import org.xml.sax.SAXException;
 import org.xml.sax.helpers.DefaultHandler;
 
 /**
- * The purpose of this class is to load MediaWiki XML-file to the JAMWiki.
+ * The purpose of this class is to import a MediaWiki XML file into JAMWiki.
  */
-public class MediaWikiXmlTopicFactory extends DefaultHandler {
+public class MediaWikiXmlTopicFactory extends DefaultHandler implements Migrator {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(MediaWikiXmlTopicFactory.class.getName());
 	private static final int MEDIAWIKI_MAIN_NAMESPACE_ID = 0;
 	private static final int MEDIAWIKI_FILE_NAMESPACE_ID = 6;
 	private static final int MEDIAWIKI_TEMPLATE_NAMESPACE_ID = 10;
 	private static final int MEDIAWIKI_CATEGORY_NAMESPACE_ID = 14;
+	private static final String MEDIAWIKI_ELEMENT_NAMESPACE = "namespace";
+	private static final String MEDIAWIKI_ELEMENT_TOPIC = "page";
+	private static final String MEDIAWIKI_ELEMENT_TOPIC_CONTENT = "text";
+	private static final String MEDIAWIKI_ELEMENT_TOPIC_NAME = "title";
+	private static final String MEDIAWIKI_ELEMENT_TOPIC_VERSION = "revision";
+	private static final String MEDIAWIKI_ELEMENT_TOPIC_VERSION_COMMENT = "comment";
+	private static final String MEDIAWIKI_ELEMENT_TOPIC_VERSION_EDIT_DATE = "timestamp";
+	// the Mediawiki XML file uses ISO 8601 format for dates
+	private static final String ISO_8601_DATE_FORMAT = "yyyy-MM-dd'T'HH:mm:ss'Z'";
 
 	/** This map holds the current tag's attribute names and values.  It is cleared after an end-element is called and thus fails for nested elements. */
 	private Map<String, String> currentAttributeMap = new HashMap<String, String>();
 	/** This buffer holds the content of the current element during parsing.  It will be flushed after an end-element tag is reached. */
 	private StringBuffer currentElementBuffer = new StringBuffer();
+	private Topic currentTopic = new Topic();
+	private TopicVersion currentTopicVersion = new TopicVersion();
+	private Map<Date, TopicVersion> currentTopicVersions = new TreeMap<Date, TopicVersion>();
 	private final WikiUser user;
 	private final String authorIpAddress;
-	private String virtualWiki = "en";
 	private final Map<Integer, String> namespaces = new HashMap<Integer, String>();
-	private String pageName = null;
-	private String pageText = null;
-	private String processedTopicName = null;
+	private Map<Topic, List<TopicVersion>> parsedTopics = new HashMap<Topic, List<TopicVersion>>();
+	private int previousTopicContentLength = 0;
 
 	/**
 	 *
 	 */
-	public MediaWikiXmlTopicFactory(String virtualWiki, WikiUser user, String authorIpAddress) {
+	public MediaWikiXmlTopicFactory(WikiUser user, String authorIpAddress) {
 		super();
-		this.virtualWiki = virtualWiki;
 		this.authorIpAddress = authorIpAddress;
 		this.user = user;
 	}
@@ -75,43 +90,34 @@ public class MediaWikiXmlTopicFactory extends DefaultHandler {
 	/**
 	 *
 	 */
-	public String importWikiXml(File file) throws Exception{
-		//For big file parsing
-		System.setProperty("entityExpansionLimit", "1000000");
-		SAXParserFactory factory = SAXParserFactory.newInstance();
-		try {
-			// Parse the input file
-			SAXParser saxParser = factory.newSAXParser();
-			saxParser.parse(file, this);
-		} catch (Throwable t) {
-			logger.severe("Error by importing "+((MediaWikiXmlTopicFactory)this).pageName, t);
-			throw new Exception("Error by import: "+t.getMessage(), t);
-		}
-		return this.processedTopicName;
+	public Map<Topic, List<TopicVersion>> importFromFile(File file) throws MigrationException {
+		this.importWikiXml(file);
+		return this.parsedTopics;
 	}
 
 	/**
-	 * Once a <page> element has finished parsing create the topic specified in the XML data.
+	 *
 	 */
-	private void createTopic() throws SAXException {
-		Topic topic = new Topic();
-		String topicName = convertArticleNameFromWikipediaToJAMWiki(pageName);
-		topic.setName(topicName);
-		topic.setVirtualWiki(virtualWiki);
-		// preprocess text of topic to fit JAMWiki
-		pageText = convertNamespaces(pageText);
-		topic.setTopicContent(pageText);
-		int charactersChanged = StringUtils.length(pageText);
-		TopicVersion topicVersion = new TopicVersion(user, authorIpAddress, "imported", pageText, charactersChanged);
-		WikiLink wikiLink = LinkUtil.parseWikiLink(topicName);
-		topic.setTopicType(WikiUtil.findTopicTypeForNamespace(wikiLink.getNamespace()));
-		// Store topic in database
+	public void exportToFile(File file, Map<Topic, List<TopicVersion>> data) throws MigrationException {
+		throw new UnsupportedOperationException();
+	}
+
+	/**
+	 *
+	 */
+	private void importWikiXml(File file) throws MigrationException {
+		// For big file parsing
+		System.setProperty("entityExpansionLimit", "1000000");
+		SAXParserFactory factory = SAXParserFactory.newInstance();
 		try {
-			ParserOutput parserOutput = ParserUtil.parserOutput(pageText, virtualWiki, pageName);
-			WikiBase.getDataHandler().writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks(), true);
-			this.processedTopicName = topic.getName();
-		} catch (Exception e) {
-			throw new SAXException(e);
+			SAXParser saxParser = factory.newSAXParser();
+			saxParser.parse(file, this);
+		} catch (ParserConfigurationException e) {
+			throw new MigrationException(e);
+		} catch (IOException e) {
+			throw new MigrationException(e);
+		} catch (SAXException e) {
+			throw new MigrationException(e);
 		}
 	}
 
@@ -137,11 +143,11 @@ public class MediaWikiXmlTopicFactory extends DefaultHandler {
 	 * Convert the Wikipedia article namespace (if any) to a JAMWiki article namespace.
 	 */
 	private String convertArticleNameFromWikipediaToJAMWiki(String fullName) {
-		String ret = pageName;
-		int pos = pageName.indexOf(':');
+		String ret = fullName;
+		int pos = fullName.indexOf(':');
 		if (pos > 0) {
-			String namespace = pageName.substring(0, pos);
-			String title = pageName.substring(pos+1);
+			String namespace = fullName.substring(0, pos);
+			String title = fullName.substring(pos+1);
 			String jamwikiNamespace = findJamwikiNamespace(namespace);
 			if (jamwikiNamespace.length() > 0) {
 				// matching JAMWiki namespace found
@@ -160,6 +166,19 @@ public class MediaWikiXmlTopicFactory extends DefaultHandler {
 		ret = Pattern.compile("\\[\\[" + namespaces.get(MEDIAWIKI_CATEGORY_NAMESPACE_ID) + "\\:", Pattern.CASE_INSENSITIVE).matcher(ret).replaceAll("[[" + NamespaceHandler.NAMESPACE_CATEGORY + ":");
 		ret = Pattern.compile("\\[\\[" + namespaces.get(MEDIAWIKI_FILE_NAMESPACE_ID) + "\\:", Pattern.CASE_INSENSITIVE).matcher(ret).replaceAll("[[" + NamespaceHandler.NAMESPACE_IMAGE + ":");
 		return ret;
+	}
+
+	/**
+	 *
+	 */
+	private Timestamp parseEditTimestamp(String timestamp) {
+		try {
+			Date date = DateUtils.parseDate(timestamp, new String[]{ISO_8601_DATE_FORMAT});
+			return new Timestamp(date.getTime());
+		} catch (ParseException e) {
+			// FIXME - this should be handled somehow
+			return new Timestamp(System.currentTimeMillis());
+		}
 	}
 
 	//===========================================================
@@ -190,10 +209,15 @@ public class MediaWikiXmlTopicFactory extends DefaultHandler {
 				}
 			}
 		}
-		if (StringUtils.equals("page", qName)) {
-			// new page, reset values
-			pageName = "";
-			pageText = "";
+		if (MEDIAWIKI_ELEMENT_TOPIC_VERSION.equals(qName)) {
+			this.currentTopicVersion = new TopicVersion();
+			this.currentTopicVersion.setAuthorIpAddress(this.authorIpAddress);
+			if (this.user != null) {
+				this.currentTopicVersion.setAuthorId(this.user.getUserId());
+			}
+		} else if (MEDIAWIKI_ELEMENT_TOPIC.equals(qName)) {
+			this.currentTopic = new Topic();
+			this.currentTopicVersions = new TreeMap<Date, TopicVersion>();
 		}
 	}
 
@@ -207,17 +231,34 @@ public class MediaWikiXmlTopicFactory extends DefaultHandler {
 	 * @param qName The qualified name (with prefix), or the empty string if qualified names are not available.
 	 */
 	public void endElement(String uri, String localName, String qName) throws SAXException {
-		if (StringUtils.equals("namespace", qName)) {
+		if (StringUtils.equals(MEDIAWIKI_ELEMENT_NAMESPACE, qName)) {
 			namespaces.put(NumberUtils.toInt(this.currentAttributeMap.get("key")), currentElementBuffer.toString().trim());
-		}
-		if ("title".equals(qName)) {
-			pageName = currentElementBuffer.toString().trim();
-		}
-		if ("text".equals(qName)) {
-			pageText = currentElementBuffer.toString().trim();
-		}
-		if ("page".equals(qName)) {
-			this.createTopic();
+		} else if (MEDIAWIKI_ELEMENT_TOPIC_NAME.equals(qName)) {
+			String topicName = currentElementBuffer.toString().trim();
+			topicName = convertArticleNameFromWikipediaToJAMWiki(topicName);
+			WikiLink wikiLink = LinkUtil.parseWikiLink(topicName);
+			currentTopic.setTopicType(WikiUtil.findTopicTypeForNamespace(wikiLink.getNamespace()));
+			currentTopic.setName(topicName);
+		} else if (MEDIAWIKI_ELEMENT_TOPIC_CONTENT.equals(qName)) {
+			String topicContent = currentElementBuffer.toString().trim();
+			topicContent = convertNamespaces(topicContent);
+			currentTopic.setTopicContent(topicContent);
+			currentTopicVersion.setVersionContent(topicContent);
+			currentTopicVersion.setCharactersChanged(StringUtils.length(topicContent) - previousTopicContentLength);
+			previousTopicContentLength = StringUtils.length(topicContent);
+		} else if (MEDIAWIKI_ELEMENT_TOPIC_VERSION_COMMENT.equals(qName)) {
+			this.currentTopicVersion.setEditComment(currentElementBuffer.toString().trim());
+		} else if (MEDIAWIKI_ELEMENT_TOPIC_VERSION_EDIT_DATE.equals(qName)) {
+			this.currentTopicVersion.setEditDate(this.parseEditTimestamp(currentElementBuffer.toString().trim()));
+		} else if (MEDIAWIKI_ELEMENT_TOPIC_VERSION.equals(qName)) {
+			this.currentTopicVersions.put(currentTopicVersion.getEditDate(), currentTopicVersion);
+		} else if (MEDIAWIKI_ELEMENT_TOPIC.equals(qName)) {
+			List<TopicVersion> currentTopicVersionList = new ArrayList<TopicVersion>();
+			// topic versions are stored in a tree map to allow sorting... convert to a list
+			for (TopicVersion topicVersion : this.currentTopicVersions.values()) {
+				currentTopicVersionList.add(topicVersion);
+			}
+			this.parsedTopics.put(currentTopic, currentTopicVersionList);
 		}
 	}
 
