@@ -18,11 +18,22 @@ package org.jamwiki.servlets;
 
 import java.io.File;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import org.apache.commons.fileupload.FileItem;
 import org.apache.commons.lang.StringUtils;
+import org.jamwiki.DataAccessException;
+import org.jamwiki.WikiBase;
+import org.jamwiki.WikiException;
 import org.jamwiki.migrate.MediaWikiXmlTopicFactory;
+import org.jamwiki.migrate.MigrationException;
+import org.jamwiki.migrate.Migrator;
+import org.jamwiki.model.Topic;
+import org.jamwiki.model.TopicVersion;
+import org.jamwiki.parser.ParserOutput;
+import org.jamwiki.parser.ParserUtil;
 import org.jamwiki.utils.WikiLogger;
 import org.jamwiki.Environment;
 import org.jamwiki.WikiException;
@@ -64,24 +75,46 @@ public class ImportServlet extends JAMWikiServlet {
 		String virtualWiki = pageInfo.getVirtualWikiName();
 		Iterator iterator = ServletUtil.processMultipartRequest(request, Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), Environment.getLongValue(Environment.PROP_FILE_MAX_FILE_SIZE));
 		WikiUser user = ServletUtil.currentWikiUser();
-		MediaWikiXmlTopicFactory importer = new MediaWikiXmlTopicFactory(virtualWiki, user, ServletUtil.getIpAddress(request));
-		String topicName = null;
-		while (iterator.hasNext()) {
-			FileItem item = (FileItem)iterator.next();
-			if (item.isFormField()) {
-				continue;
+		Migrator migrator = new MediaWikiXmlTopicFactory(user, ServletUtil.getIpAddress(request));
+		ParserOutput parserOutput = null;
+		List<TopicVersion> topicVersions;
+		try {
+			while (iterator.hasNext()) {
+				FileItem item = (FileItem)iterator.next();
+				if (item.isFormField()) {
+					continue;
+				}
+				File file = saveFileItem(item);
+				Map<Topic, List<TopicVersion>> parsedTopics = migrator.importFromFile(file);
+				for (Topic topic : parsedTopics.keySet()) {
+					topic.setVirtualWiki(virtualWiki);
+					topicVersions = parsedTopics.get(topic);
+					if (topicVersions.isEmpty()) {
+						throw new WikiException(new WikiMessage("import.caption.failure"));
+					}
+					for (TopicVersion topicVersion : topicVersions) {
+						parserOutput = ParserUtil.parserOutput(topicVersion.getVersionContent(), virtualWiki, topic.getName());
+						WikiBase.getDataHandler().writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks(), true);
+					}
+					// create a dummy version to indicate that the topic was imported
+					// FIXME - hard coding
+					TopicVersion topicVersion = new TopicVersion(user, ServletUtil.getIpAddress(request), "Imported by " + user.getUsername(), topic.getTopicContent(), 0);
+					WikiBase.getDataHandler().writeTopic(topic, topicVersion, parserOutput.getCategories(), parserOutput.getLinks(), true);
+				}
+				file.delete();
+				break;
 			}
-			File xmlFile = saveFileItem(item);
-			// FIXME - breaks if more than one topic imported
-			topicName = importer.importWikiXml(xmlFile);
-			xmlFile.delete();
+		} catch (MigrationException e) {
+			logger.severe("Failure while importing from file", e);
+			next.addObject("error", new WikiMessage("import.caption.failure", e.getMessage()));
+		} catch (DataAccessException e) {
+			logger.severe("Failure while importing from file", e);
+			next.addObject("error", new WikiMessage("import.caption.failure", e.getMessage()));
+		} catch (WikiException e) {
+			logger.severe("Failure while importing from file", e);
+			next.addObject("error", e.getWikiMessage());
 		}
-		if (!StringUtils.isBlank(topicName)) {
-			ServletUtil.redirect(next, virtualWiki, topicName);
-		} else {
-			next.addObject("error", new WikiMessage("import.caption.failure"));
-			view(request, next, pageInfo);
-		}
+		view(request, next, pageInfo);
 	}
 
 	/**
